# gim-cli-v4

./: .gitignore  __version__.py
gmail_monitor/: README.md  pyproject.toml  requirements.txt  schema.sql
gmail_monitor/gmail_monitor/: .gitignore  __init__.py  __main__.py  cli.py  config.py  config.toml.example  db.py  display.py  models.py  monitor.py  notifier.py  ntfy_sender.py
